add user details

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
 <style>
   @import url('https://fonts.googleapis.com/css?family=Poiret+One');
 </style>
+<style>
+  @import url('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
+</style>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
